methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:8: error: expected class or object definition
def dessine() {
^MethodsPicture:10: error: Unmatched closing brace '}' ignored here
  }
  ^